--- a/satisfaying-transitions/3/index.html
+++ b/satisfaying-transitions/3/index.html
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sketch</title>
 
-  <title>Sketch</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
 
-  <script src="libraries/p5.min.js"></script>
-  <script src="libraries/p5.sound.min.js"></script>
-</head>
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="libraries/matter.js"
+    ></script>
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="classes/BlockCore.js"
+    ></script>
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="classes/Block.js"
+    ></script>
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="classes/Polygon.js"
+    ></script>
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="classes/PolygonFromPoints.js"
+    ></script>
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="classes/Mouse.js"
+    ></script>
+  </head>
 
-<body>
-  <script src="sketch.js"></script>
-</body>
-
+  <body>
+    <script src="easing.js"></script>
+    <script src="sketch.js"></script>
+  </body>
 </html>
