--- a/satisfaying-transitions/4/index.html
+++ b/satisfaying-transitions/4/index.html
@@ -10,12 +10,14 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 
   <script src="libraries/p5.min.js"></script>
+  <script src="libraries/easing.js"></script>
+  <script src="libraries/utils.js"></script>
   <script src="libraries/p5.sound.min.js"></script>
 </head>
 
 <body>
-  <script src="sketch.js"></script>
   <script src="Apple.js"></script>
+  <script src="sketch.js"></script>
 </body>
 
 </html>
